--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -219,7 +219,7 @@
   Pages = {459--467},
   Publisher = {John Wiley \& Sons, Inc.},
   Title = {{Inaccuracies in Program Profilers}},
-  Url = {http://dx.doi.org/10.1002/spe.4380180506},  
+  Url = {http://dx.doi.org/10.1002/spe.4380180506},
   Volume = {18},
   Year = {1988}
 }
@@ -535,12 +535,12 @@
   pages = {13--24},
   numpages = {12},
   url = {http://doi.acm.org/10.1145/1806596.1806599},
-  doi = {10.1145/1806596.1806599}, 
+  doi = {10.1145/1806596.1806599},
   acmid = {1806599},
   publisher = {ACM},
   address = {New York, NY, USA},
   keywords = {bug detection, context sensitivity, dynamic analysis}
-} 
+}
 
 @inproceedings{Zeng14,
   author = {Zeng, Qiang and Rhee, Junghwan and Zhang, Hui and Arora, Nipun and Jiang, Guofei and Liu, Peng},
@@ -958,4 +958,91 @@
   publisher = {ACM},
   address = {New York, NY, USA},
   keywords = {dynamic program analysis, instrumentation, profiling}
+}
+
+@inproceedings{Chambers91,
+  author = {Chambers, Craig and Ungar, David},
+  title = {{Making Pure Object-oriented Languages Practical}},
+  booktitle = {Conference Proceedings on Object-oriented Programming Systems, Languages, and Applications},
+  series = {OOPSLA '91},
+  year = {1991},
+  isbn = {0-201-55417-8},
+  location = {Phoenix, Arizona, USA},
+  pages = {1--15},
+  numpages = {15},
+  url = {http://doi.acm.org/10.1145/117954.117955},
+  doi = {10.1145/117954.117955},
+  acmid = {117955},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@phdthesis{Chambers92,
+  title = {{The Design and Implementation of the SELF Compiler, an Optimizing Compiler for Object-Oriented Programming Languages}},
+  author = {Chambers, Craig},
+  year = {1992},
+  school = {Stanford University},
+  url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.30.1652\&rep=rep1\&type=pdf},
+}
+
+@inproceedings{Holzle92,
+  author = {H\"{o}lzle, Urs and Chambers, Craig and Ungar, David},
+  title = {{Debugging Optimized Code with Dynamic Deoptimization}},
+  booktitle = {Proceedings of the ACM SIGPLAN 1992 Conference on Programming Language Design and Implementation},
+  series = {PLDI '92},
+  year = {1992},
+  isbn = {0-89791-475-9},
+  location = {San Francisco, California, USA},
+  pages = {32--43},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/143095.143114},
+  doi = {10.1145/143095.143114},
+  acmid = {143114},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
+
+@article{Suganuma06,
+  author = {Suganuma, Toshio and Yasue, Toshiaki and Nakatani, Toshio},
+  title = {{A Region-based Compilation Technique for Dynamic Compilers}},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  issue_date = {January 2006},
+  volume = {28},
+  number = {1},
+  month = jan,
+  year = {2006},
+  issn = {0164-0925},
+  pages = {134--174},
+  numpages = {41},
+  url = {http://doi.acm.org/10.1145/1111596.1111600},
+  doi = {10.1145/1111596.1111600},
+  acmid = {1111600},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {JIT compiler, Region-based compilation, dynamic compilation, on-stack replacement, partial inlining}
+}
+
+@misc{Pizlo14,
+  author = {Pizlo, Filip},
+  title = {Introducing the {WebKit} {FTL} {JIT}},
+  type = {Blog},
+  note = {\url{https://www.webkit.org/blog/3362/} Accessed: 2016-01-09}
+}
+
+@inproceedings{Lameed13,
+  author = {Lameed, Nurudeen A. and Hendren, Laurie J.},
+  title = {{A Modular Approach to On-stack Replacement in LLVM}},
+  booktitle = {Proceedings of the 9th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments},
+  series = {VEE '13},
+  year = {2013},
+  isbn = {978-1-4503-1266-0},
+  location = {Houston, Texas, USA},
+  pages = {143--154},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/2451512.2451541},
+  doi = {10.1145/2451512.2451541},
+  acmid = {2451541},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic optimization, jit compilation, llvm, matlab, mcjit, on-stack replacement}
 }
