--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1046,3 +1046,35 @@
   address = {New York, NY, USA},
   keywords = {dynamic optimization, jit compilation, llvm, matlab, mcjit, on-stack replacement}
 }
+
+@inproceedings{Lattner04,
+  author = {Lattner, Chris and Adve, Vikram},
+  title = {{LLVM}: A Compilation Framework for Lifelong Program Analysis \& Transformation},
+  booktitle = {Proceedings of the International Symposium on Code Generation and Optimization: Feedback-directed and Runtime Optimization},
+  series = {CGO '04},
+  year = {2004},
+  isbn = {0-7695-2102-9},
+  location = {Palo Alto, California},
+  pages = {75--},
+  url = {http://dl.acm.org/citation.cfm?id=977395.977673},
+  acmid = {977673},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA},
+}
+
+@inproceedings{Deutsch84,
+  author = {Deutsch, L. Peter and Schiffman, Allan M.},
+  title = {{Efficient Implementation of the {S}malltalk-80 System}},
+  booktitle = {Proceedings of the 11th ACM SIGACT-SIGPLAN Symposium on Principles of Programming Languages},
+  series = {POPL '84},
+  year = {1984},
+  isbn = {0-89791-125-3},
+  location = {Salt Lake City, Utah, USA},
+  pages = {297--302},
+  numpages = {6},
+  url = {http://doi.acm.org/10.1145/800017.800542},
+  doi = {10.1145/800017.800542},
+  acmid = {800542},
+  publisher = {ACM},
+  address = {New York, NY, USA}
+}
