--- a/header.tex
+++ b/header.tex
@@ -82,6 +82,8 @@
 
 % OSRKit
 \newcommand{\osrkit}{{\sf OSRKit}}
+\newcommand{\tinyvm}{{\sf TinyVM}}
+\newcommand{\clang}{{\tt clang}}
 \newcommand{\fbase}{$\textsf{f}$}
 \newcommand{\fvariant}{$\textsf{f'}$}
 \newcommand{\fosrfrom}{$\textsf{f}_{\textsf{from}}$}
