--- a/figures/osr-isordfrom/caption.tex
+++ b/figures/osr-isordfrom/caption.tex
@@ -1,2 +1,2 @@
-\label{fig:osr-isordfrom} LLVM IR version of base function {\tt isord} (\myfigure\ref{fig:osr-isord}) instrumented for open OSR. The OSR is fired at the beginning of the loop body after 1000 iterations. Additions resulting from the instrumentation are in grey.
+\label{fig:osr-isordfrom} LLVM IR version of base function {\tt isord} (\myfigure\ref{fig:osr-isord}) instrumented for open OSR. Additions resulting from the instrumentation are in grey. The OSR is fired at the beginning of the loop body after 1000 iterations, i.e., when the counter reaches 0.
 
