--- a/osr-llvm.tex
+++ b/osr-llvm.tex
@@ -67,7 +67,7 @@ The open OSR scenario is similar, with one main difference (see \myfigure\ref{fi
 \end{figure}
 \fi
 
-\subsection{LLVM Implementation}
+\subsection{Implementing OSR in LLVM}
 
 The LLVM compiler infrastructure~\cite{Lattner04} provides a Just-In-Time compiler called MCJIT that is currently being used for generating optimized code at run-time in virtual machines for dynamic languages. MCJIT is employed in both industrial and research projects, including Webkit's Javascript engine, the open-source Python implementation Pyston, the Rubinius project for Ruby, Julia for high-performance technical computing, McVM for MATLAB, CXXR for the R language, Terra for Lua, and the Pure functional programming language. The MCJIT compiler shares the same optimization pipeline with LLVM front-ends for static languages such as \clang, and it provides dynamic features such as native code loading and linking, as well as a customizable memory manager for code and data sections.
 
@@ -83,7 +83,8 @@ We prototyped our idea of flexible OSR infrastructure working entirely at IR lev
 
 We also implemented a proof-of-concept VM called \tinyvm\ that provides an interactive environment for LLVM IR manipulation, JIT compilation, and benchmarking. All of our code is publicly available and has been endorsed by the joint Artifact Evaluation process of CGO-PPoPP 2016.
 
-\paragraph*{A Running Example.} We present our OSR embodiment for LLVM through a simple running example that illustrates a profile-driven optimization scenario. We start from a simple base function ({\tt isord}) that checks whether an array of numbers is ordered according to some criterion specified by a comparator (see \myfigure\ref{fig:osr-isord}). Our goal is to instrument {\tt isord} so that, whenever the number of loop iterations exceeds a certain threshold, control is dynamically diverted to a faster version generated on the fly by inlining the comparator. The IR code shown in this section has been generated with \clang\ and later instrumented with \osrkit\ inside \tinyvm. Virtual register names and basic block labels have been refactored for the sake of readability.
+\subsubsection*{A Running Example}
+We present our OSR embodiment for LLVM through a simple running example that illustrates a profile-driven optimization scenario. We start from a simple base function ({\tt isord}) that checks whether an array of numbers is ordered according to some criterion specified by a comparator (see \myfigure\ref{fig:osr-isord}). Our goal is to instrument {\tt isord} so that, whenever the number of loop iterations exceeds a certain threshold, control is dynamically diverted to a faster version generated on the fly by inlining the comparator. The IR code shown in this section has been generated with \clang\ and later instrumented with \osrkit\ inside \tinyvm. Virtual register names and basic block labels have been refactored for the sake of readability.
 
 \ifdefined\noauthorea
 \begin{figure}[t]
@@ -175,7 +176,10 @@ Instrumenting functions for OSR at a higher level than machine code yields sever
 %by analyzing code at an intermediate representation level.
 \end{enumerate}
 
-\noindent A natural question is whether encoding OSR at a higher level of abstraction can result in poorer performance than binary code approaches. Our solution relies on the backend's compilation pipeline to generate the most efficient native code for \fosrfrom\ and \fosrto. In the next section, we present an implementation of our framework in the LLVM compiler infrastructure, showing examples of OSR machine code generated for an x86-64 target. We then provide performance numbers in Section\missing, where OSR performance is measured on classic benchmarks.
+\noindent A natural question is whether encoding OSR at a higher level of abstraction can result in poorer performance than binary code approaches. Our solution relies on the backend's compilation pipeline to generate the most efficient native code for \fosrfrom\ and \fosrto. We provide performance numbers in Section\missing by measuring the overhead of \osrkit\ on classic benchmarks.
 
-\mynote{Compensation code, OSR at arbitrary points, effort to investigate its feasibility}
+To the best of our knowledge, our OSR framework is the first that supports OSR point insertion at arbitrary locations in the code. In order to support OSR at any program points, two engineering aspects are involved in the continuation function generation: manipulating the code of the optimized function, which can be daunting when the SSA form must be preserved, and providing a front-end with a clean interface to specify glue code possibly required to perform the transition. There was considerable implementation and experimentation effort to show its feasibility.
 
+Choosing where it is profitable to insert OSR points, also exploiting \osrkit's ability to insert them at places that other solutions do not support, is delegated to the front-end as it stricly depends on the optimizations it performs. In principle, supporting OSR at arbitrary locations can be useful to implement a flexible deoptimization mechanism for aggressive speculative optimizations: e.g., execution might leave a heavily optimized loop while in the middle of it, execute a glue code to adjust the state when needed, and continue in a safe version of the function. 
+
+In Section\missing\ we present a case study in the McVM runtime for the MATLAB language, showing \missing.
