--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -8,8 +8,9 @@ In the first part of the chapter, we present a platform-independent framework fo
 In the second part, we make a first step towards a provably sound methodological framework for OSR. We formalize the concept of {\em multi-version program}, and we identify sufficient conditions for the correctness of an OSR transition. We also devise an algorithm for automatically generating compensation code possibly required at a program location in the presence of several common compiler optimizations.
 
 \input{osr-llvm}
-
-\section{Proving On-Stack Replacement Sound}
+\input{osr-correctness}
 
 %\section{On-Stack Replacement in the Presence of Compiler Optimizations}
 \section{On-Stack Replacement and Compiler Optimizations}
+
+\input{osr-related}
